--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
+        "pug": "^3.0.2",
+        "pug-plain-loader": "^1.1.0",
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
