--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "@tailwindcss/line-clamp": "^0.2.1"
     }
 }
