--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "@tailwindcss/line-clamp": "^0.2.1"
+        "@tailwindcss/line-clamp": "^0.2.1",
+        "mitt": "^3.0.0"
     }
 }
